using Flex on contact bar to fix spacing issues

--- a/01week/resume/css/style.css
+++ b/01week/resume/css/style.css
@@ -1,20 +1,35 @@
-body {
-  background-image: url("http://1-background.com/images/silk/black-silk-repeating-background.jpg");
-  background-repeat: repeat;
-  background-attachment: fixed;  
-  text-align: center;
+  body {
+    background-image: url("http://1-background.com/images/silk/black-silk-repeating-background.jpg");
+    background-repeat: repeat;
+    background-attachment: fixed;  
+    text-align: center;
     font-family: "Oxygen Mono", monospace;
-
+    position: relative;
   }
-  /* .name {
-  } */
-  .clearfix {
-    background-color: rgb(35, 43, 43);
-    margin: auto;
-    width:100%;
-    display: inline-block;
+  h1{
+    color:rgb(92, 51, 138);
+    font-size: 50px;
+  }
+  h2 {
     color: rgb(5, 115, 134);
+    font-size: 30px;
+  }
+  .flex-container {
+    background-color: rgb(48, 48, 48,0.7);
+    color: rgb(5, 115, 134);
+    opacity: 50%;
     font-weight:bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    
+  }
+    .image {
+    display: inline-block;
+    flex:1;
+    align-self: auto;
+    order:1;
   }
   .content{
     color:rgb(92, 51, 138)
@@ -27,13 +42,30 @@ body {
     height: 20px;
     padding: 5px;
   }
-  .contactinfo #social{
-    width: 50px;
-    height: 50px;
-    display:inline-block; 
-  } 
-  .social {
-
+  .selfie{
+  margin-left:100px; 
+  width: 150px;
+  height: 150px;
+  padding: 20px;
+  border-radius: 50%;
+  }
+  ul {
+    display: inline-block;
+    list-style: none;
+  }
+  li{
+    padding: 15px;
+  }
+  .personal {
+    flex: 1;
+    order:2;
+  }
+  #social {
+    position: relative;
+    margin-right:50px; 
+    flex: 1;
+    align-self: center;
+    order:3;
   }
     .fa-linkedin {
     color:#FFFFFF;   
@@ -41,44 +73,6 @@ body {
   .fa-facebook {
     color:#FFFFFF;
   }
-  .selfie{
-  margin-top: 30px; 
-  margin-left: 600px;
-  width: 150px;
-  height: 150px;
-  padding: 20px;
-  border-radius: 50%;
-  }
-  
-  ul {
-    list-style: none;
-  }
-  li{
-    padding: 15px;
-  }
-  .personal {
-    float: right;
-    margin-right: 600px;
-    margin-top: 30px;
-  }
-  /* #social:nth-child(2) {
-    float:right;
-  } */
-  nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h1{
-    font-size: 50px;
-    color:rgb(92, 51, 138);
-  }
-  h2 {
-    color: rgb(5, 115, 134);
-    font-size: 30px;
-  }
-  
   nav {
     border: plum solid 10px;
     margin-left: 20%;
